--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/home.css">  <!-- refatoração -->
+    <link rel="stylesheet" href="/styles/responsive.css">   <!-- refatoração: importando o responsive -->
 
 </head>
 <body> 
