--- a/create-point.html
+++ b/create-point.html
@@ -19,7 +19,7 @@
     <div id="page-create-point">
             <header>
                 <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="http://google.com.br">
+                <a href="/">
                     <span></span>
                     Voltar para home
                 </a>  
