--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="content">
             <header>
                 <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="http://google.com.br">
+                <a href="/create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>  
