Inserindo lista dinâmina de estado e cidades

--- a/create-point.html
+++ b/create-point.html
@@ -56,8 +56,11 @@
                             <div class="field">
                                 <label for="state">Estado</label>
                                 <select name="uf">
-                                    <option value="">Selecione o Estado</option>                                                                        
-                                </select>                            
+                                    <option value="">Selecione o Estado</option>
+                                </select>    
+                                      
+                                <input type="hidden" name="state">
+                                
                             </div>
 
                             <div class="field">
@@ -77,6 +80,8 @@
 
             </form>
     </div>
+
+    <script src="/scripts/create-point.js"></script>
   
 </body>
 </html>
